# ResearchScope

./: .env.example  BUG_REPORT.md  CONTRIBUTING.md  README.md  ROADMAP.md  architecture.md  llms.txt  pyproject.toml  requirements.txt
.github/workflows/: backfill.yml  conference-backfill.yml  conference-sync.yml  deploy.yml  pipeline.yml  tests.yml  update.yml
config/: topics.yaml  venues.yaml  weights.yaml
researchscope/: __init__.py  cli.py
researchscope/analysis/: __init__.py  gaps.py  ranking.py
researchscope/collectors/: __init__.py  arxiv.py  semantic_scholar.py
researchscope/models/: __init__.py  author.py  paper.py
researchscope/storage/: __init__.py  store.py
scripts/: discord_potd.py  make_gif.py  migrate_to_supabase.py
site/: authors.html  conference-recommender.html  conferences.html  deadlines.html  digest.html  favourites.html  gaps.html  index.html  labs.html  library.html  papers.html  search.html  topics.html
site/data/: authors.json  conference_recommender.json  editorial.json  gaps.json  labs.json  papers.json  papers_db.json  search_index.json  stats.json  topics.json  universities.json
src/: pipeline.py
src/aggregation/: aggregator.py
src/clustering/: clusterer.py
src/connectors/: acl_connector.py  arxiv_connector.py  cvf_connector.py  openreview_connector.py  pmlr_connector.py  semantic_scholar_connector.py
src/content/: generator.py
supabase/: schema.sql
tests/: conftest.py  test_aggregation.py  test_analysis.py  test_conference_recommender_data.py  test_frontend_library.py  test_frontend_topic_graph.py  test_gaps.py  test_models.py  test_schema.py  test_scoring.py  test_tagging.py
(+19 files in other folders)
