[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchscope"
version = "0.1.0"
description = "Open-source research intelligence for CS papers — track what matters, who drives it, what to read first, and where the research gaps are."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Md Kishor Morol" }]
requires-python = ">=3.10"
keywords = ["research", "papers", "arxiv", "nlp", "ml", "academia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13",
    "typer>=0.12",
    "pydantic>=2",
    "scikit-learn>=1.4",
    "tinydb>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
]

[project.scripts]
researchscope = "researchscope.cli:app"

[project.urls]
Homepage = "https://github.com/kishormorol/ResearchScope"
Issues = "https://github.com/kishormorol/ResearchScope/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["researchscope*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
